--- a/webportal/webapp/src/app/main/datasetinfo/datasetinfo.component.html
+++ b/webportal/webapp/src/app/main/datasetinfo/datasetinfo.component.html
@@ -57,81 +57,85 @@
 
  
 <button class="toggle-button" (click)="showDialog()">HSIS Form</button>
-
 <p-dialog [(visible)]="displayDialog" [modal]="true" [style]="{width: '60%'}">
-  <h3>HSIS Form</h3>
+  <h1>HSIS Form</h1>
   <div class="form-container">
+    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Data Request</h2>
     <form [formGroup]="form">
       <div class="form-section">
-        <h3>Data Request</h3>
-        <p>Please Note:</p>
-        <p>HSIS is designed to provide data to be used in research conducted in the general public interest, which is intended for publication in a scientific journal or other national publication. By submitting this request, the user is promising to follow these guidelines. Educators who wish to use HSIS data for instructional purposes in a road safety course should contact HSIS staff directly at Ana.Eigen@dot.gov. Users wishing to obtain data for purposes other than research or instruction should contact the States directly. HSIS staff will be pleased to provide contact names and addresses.</p>
-        <p>Before filling out the form, please review the data element tables to see which variables are available for a given state or the guidebooks for detailed descriptions and definitions.</p>
-        <p>Table Directions (please read first)</p>
-        <p>Table 1 — Data Elements for Accident, Vehicle, and Occupant Files</p>
-        <p>Table 2 — Data Elements for Roadway and Roadway-Related Files</p>
-        <p>Guidebooks:</p>
+        <h3>Please Note:</h3>
+        <p>HSIS is designed to provide data to be used in research conducted in the general public interest, which is intended for publication in a scientific journal or other national publication. By submitting this request, the user is promising to follow these guidelines. Educators who wish to use HSIS data for instructional purposes in a road safety course should contact HSIS staff directly at <a href="%20Ana.Eigen@dot.gov">Ana.Eigen@dot.gov</a>. Users wishing to obtain data for purposes other than research or instruction should contact the States directly. HSIS staff will be pleased to provide contact names and addresses.</p>
+        <p>Before filling out the form, please review the data element tables to see which variables are available for a given state 
+          or the guidebooks for detailed descriptions and definitions.</p>
+        <p>Before filling out the form, please review the data element tables to see which variables are available for a given state 
+          or the guidebooks for detailed descriptions and definitions.</p>
+        <h4>Table <a href="https://hsisinfo.org/tables.cfm#directions">Directions</a> (please read first)</h4>
+        <p><a href="https://hsisinfo.org/table1.cfm">Table 1</a> — Data Elements for Accident, Vehicle, and Occupant Files</p>
+        <p><a href="https://hsisinfo.org/table2.cfm">Table 2</a> — Data Elements for Roadway and Roadway-Related Files</p>
+        <h4>Guidebooks:</h4>
         <ul>
-          <li>California</li>
-          <li>Charlotte, NC</li>
-          <li>Illinois</li>
-          <li>Maine</li>
-          <li>Minnesota</li>
-          <li>North Carolina</li>
-          <li>Ohio</li>
-          <li>Washington</li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">California</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Charlotte, NC</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Illinois</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Maine</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Minnesota</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">North Carolina</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Ohio</a></li>
+          <li><a href="https://hsisinfo.org/pdf/guidebook_CA.pdf">Washington</a></li>
         </ul>
         <div class="checkbox-section">
           <p-checkbox id="notice-checkbox" [(ngModel)]="isNoticeChecked" binary="true" required></p-checkbox>
           <label for="notice-checkbox" class="checkbox-label">I've read the notice</label>
+          <p>(you must check the notice box before completing the form)</p>
         </div>
       </div>
+      <h3>Data Request Form</h3>
       <hr>
       <fieldset class="p-fieldset">
         <legend>1. Please enter your name and contact information.</legend>
         <div class="p-grid p-fluid">
           <div class="p-col-12 p-md-6">
             <div class="p-field">
-              <label for="address1">Name*</label>
+              <label for="name">Name*</label>
               <input type="text" pInputText formControlName="name" required>
             </div>
             <div class="p-field">
               <label for="address1">Address 1*</label>
-              <input type="text" id="address1" pInputText required>
+              <input type="text" pInputText formControlName="address1" required>
             </div>
             <div class="p-field">
               <label for="address2">Address 2</label>
-              <input type="text" id="address2" pInputText>
+              <input type="text" pInputText formControlName="address2">
             </div>
             <div class="p-field">
               <label for="city">City*</label>
-              <input type="text" id="city" pInputText required>
+              <input type="text" pInputText formControlName="city" required>
             </div>
             <div class="p-field">
               <label for="state">State*</label>
-              <input type="text" id="state" pInputText required>
+              <input type="text" pInputText formControlName="state" required>
             </div>
             <div class="p-field">
               <label for="zipcode">Zipcode*</label>
-              <input type="text" id="zipcode" pInputText required>
+              <input type="text" pInputText formControlName="zipcode" required>
             </div>
           </div>
           <div class="p-col-12 p-md-6">
             <div class="p-field">
               <label for="phone">Phone number*</label>
-              <input type="tel" id="phone" pInputText required>
+              <input type="text" pInputText formControlName="phone" required>
             </div>
             <div class="p-field">
               <label for="fax">Fax</label>
-              <input type="tel" id="fax" pInputText>
+              <input type="text" pInputText formControlName="fax">
             </div>
             <div class="p-field">
               <label for="email">Email*</label>
-              <input type="email" id="email" pInputText required>
+              <input type="text" pInputText formControlName="email" required>
             </div>
             <div class="p-field">
-              <label for="confirm-email">Confirm Email*</label>
-              <input type="email" id="confirm-email" pInputText required>
+              <label for="confirm_email">Confirm Email*</label>
+              <input type="text" pInputText formControlName="confirm_email" required>
             </div>
           </div>
         </div>
@@ -221,19 +225,19 @@
         </fieldset>
       
         <fieldset>
-          <strong>7.When do you need this data or information from us? (NOTE: "ASAP" means we get to decide priority. If you provide a date, we will try to meet the deadline or will negotiate a new deadline with you depending on other work, the nature of the request, etc. Please be as realistic as possible.)*</strong>
+          <strong>7. When do you need this data or information from us? (NOTE: "ASAP" means we get to decide priority. If you provide a date, we will try to meet the deadline or will negotiate a new deadline with you depending on other work, the nature of the request, etc. Please be as realistic as possible.)*</strong>
           <div class="p-field">
             <label for="data-request-deadline">Deadline</label>
             <input type="text" id="data-request-deadline" pInputText>
           </div>
         </fieldset>
-      
+       
       </fieldset>
     
       <!-- Rest of the form fields -->
     
       <div class="p-field">
-        <button type="submit" pButton label="Submit"></button>
+        <button pButton type="button" label="Submit" (click)="submitForm()" [disabled]="!form.valid"></button>
       </div>
     </form>
   </div>
