--- a/webportal/webapp/src/app/account/datasets/datasets.component.css
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.css
@@ -1,5 +1,5 @@
 .selected_row {
-    background-color: #15235014;
+  background-color: #15235014;
 }
 
 .datasets-container {
@@ -15,201 +15,206 @@
 }
 
 .ui-table {
-    position: relative;
+  position: relative;
 }
 
 .ui-table table {
-    border-collapse: collapse;
-    width: 100%;
-    table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
 }
 
 .ui-table .ui-table-thead > tr > th,
 .ui-table .ui-table-tbody > tr > td,
 .ui-table .ui-table-tfoot > tr > td {
-    padding: .25em .5em;
+  padding: 0.25em 0.5em;
 }
 
 .ui-table .ui-sortable-column {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .ui-table-auto-layout > .ui-table-wrapper {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
 .ui-table-auto-layout > .ui-table-wrapper > table {
-    table-layout: auto;
+  table-layout: auto;
 }
 
 /* Sections */
 .ui-table-caption,
 .ui-table-summary {
-    padding: .25em .5em;
-    text-align: center;
-    font-weight: bold;
+  padding: 0.25em 0.5em;
+  text-align: center;
+  font-weight: bold;
 }
 
 .ui-table-caption {
-    border-bottom: 0 none;
+  border-bottom: 0 none;
 }
 
 .ui-table-summary {
-    border-top: 0 none;
+  border-top: 0 none;
 }
 
 /* Paginator */
 .ui-table .ui-paginator-top {
-    border-bottom: 0 none;
+  border-bottom: 0 none;
 }
 
 .ui-table .ui-paginator-bottom {
-    border-top: 0 none;
+  border-top: 0 none;
 }
 
 /* Scrollable */
 .ui-table-scrollable-wrapper {
-    position: relative;
+  position: relative;
 }
 .ui-table-scrollable-header,
 .ui-table-scrollable-footer {
-    overflow: hidden;
-    border: 0 none;
+  overflow: hidden;
+  border: 0 none;
 }
 
 .ui-table-scrollable-body {
-    overflow: auto;
-    position: relative;
+  overflow: auto;
+  position: relative;
 }
 
 .ui-table-scrollable-body > table > .ui-table-tbody > tr:first-child > td {
-    border-top: 0 none;
+  border-top: 0 none;
 }
 
 .ui-table-virtual-table {
-    position: absolute;
+  position: absolute;
 }
 
 /* Frozen Columns */
 .ui-table-frozen-view .ui-table-scrollable-body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
-.ui-table-frozen-view > .ui-table-scrollable-body > table > .ui-table-tbody > tr > td:last-child {
-    border-right: 0 none;
+.ui-table-frozen-view
+  > .ui-table-scrollable-body
+  > table
+  > .ui-table-tbody
+  > tr
+  > td:last-child {
+  border-right: 0 none;
 }
 
 .ui-table-unfrozen-view {
-    position: absolute;
-    top: 0px;
+  position: absolute;
+  top: 0px;
 }
 
 /* Resizable */
 .ui-table-resizable > .ui-table-wrapper {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
 .ui-table-resizable .ui-table-thead > tr > th,
 .ui-table-resizable .ui-table-tfoot > tr > td,
 .ui-table-resizable .ui-table-data > tr > td {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .ui-resizable-column {
-    background-clip: padding-box;
-    position: relative;
+  background-clip: padding-box;
+  position: relative;
 }
 
 .ui-table-resizable-fit .ui-resizable-column:last-child .ui-column-resizer {
-    display: none;
+  display: none;
 }
 
 .ui-table .ui-column-resizer {
-    display: block;
-    position: absolute !important;
-    top: 0;
-    right: 0;
-    margin: 0;
-    width: .5em;
-    height: 100%;
-    padding: 0px;
-    cursor:col-resize;
-    border: 1px solid transparent;
+  display: block;
+  position: absolute !important;
+  top: 0;
+  right: 0;
+  margin: 0;
+  width: 0.5em;
+  height: 100%;
+  padding: 0px;
+  cursor: col-resize;
+  border: 1px solid transparent;
 }
 
 .ui-table .ui-column-resizer-helper {
-    width: 1px;
-    position: absolute;
-    z-index: 10;
-    display: none;
+  width: 1px;
+  position: absolute;
+  z-index: 10;
+  display: none;
 }
 
 /* Edit */
 .ui-table .ui-table-tbody > tr > td.ui-editing-cell {
-    padding-top: 0;
-    padding-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.ui-table .ui-table-tbody > tr > td.ui-editing-cell p-celleditor >  * {
-    width: 100%;
+.ui-table .ui-table-tbody > tr > td.ui-editing-cell p-celleditor > * {
+  width: 100%;
 }
 
 /* Reorder */
 .ui-table-reorder-indicator-up,
 .ui-table-reorder-indicator-down {
-    position: absolute;
-    display: none;
+  position: absolute;
+  display: none;
 }
 
 /* Responsive */
 .ui-table-responsive .ui-table-tbody > tr > td .ui-column-title {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 40em) {
-    .ui-table-responsive .ui-table-thead > tr > th,
-    .ui-table-responsive .ui-table-tfoot > tr > td {
-        display: none !important;
-    }
+  .ui-table-responsive .ui-table-thead > tr > th,
+  .ui-table-responsive .ui-table-tfoot > tr > td {
+    display: none !important;
+  }
 
-    .ui-table-responsive .ui-table-tbody > tr > td {
-        text-align: left;
-        display: block;
-        border: 0 none;
-        width: 100% !important;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-		float: left;
-		clear: left;
-    }
+  .ui-table-responsive .ui-table-tbody > tr > td {
+    text-align: left;
+    display: block;
+    border: 0 none;
+    width: 100% !important;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    float: left;
+    clear: left;
+  }
 
-    .ui-table-responsive .ui-table-tbody > tr > td .ui-column-title {
-        padding: .4em;
-        min-width: 30%;
-        display: inline-block;
-        margin: -.4em 1em -.4em -.4em;
-        font-weight: bold;
-    }
+  .ui-table-responsive .ui-table-tbody > tr > td .ui-column-title {
+    padding: 0.4em;
+    min-width: 30%;
+    display: inline-block;
+    margin: -0.4em 1em -0.4em -0.4em;
+    font-weight: bold;
+  }
 }
 
 /* Loader */
 .ui-table-loading {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-    opacity: 0.1;
-    z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
+  opacity: 0.1;
+  z-index: 1;
 }
 
 .ui-table-loading-content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    z-index: 2;
-    margin-top: -1em;
-    margin-left: -1em;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 2;
+  margin-top: -1em;
+  margin-left: -1em;
 }
 
 .ui-table-tbody .ui-chkbox {
@@ -217,7 +222,14 @@
 }
 
 .smallWidth {
-    width: 20%;
+  width: 20%;
 }
 
-.material-icons.md-dark.md-inactive { color: rgba(78, 79, 80, 0.26); }
+.material-icons.md-dark.md-inactive {
+  color: rgba(78, 79, 80, 0.26);
+}
+
+.custom-dialog {
+  width: 400px;
+  height: 300px;
+}
