fixed minor upload error

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1895,7 +1895,7 @@
         (uploadHandler)="
           uploadFiles(
             $event,
-            selectedLocation + (customPrefix ? '/' + customPrefix : '')
+            selectedLocation + (customPrefix ? customPrefix + '/' : '')
           )
         "
         multiple="multiple"
