Added/changed links for data request forms

--- a/webportal/webapp/src/app/main/datasetinfo/datasetinfo.component.html
+++ b/webportal/webapp/src/app/main/datasetinfo/datasetinfo.component.html
@@ -112,16 +112,46 @@
                   through the HSIS webpage. Educators who wish to use HSIS data
                   for instructional purposes in a road safety course should
                   contact HSIS staff directly at Ana.Eigen@dot.gov. For more
-                  information https://www.hsisinfo.org/index.cfm
+                  information visit https://www.hsisinfo.org/index.cfm
                 </p>
-                <div>
-                  <a href="https://hsisinfo.org/index.cfm">Data Request Form</a>
+                <div class="accessLink">
+                  <a
+                    style="font-size: 16px"
+                    href="https://securedatacommons.atlassian.net/servicedesk/customer/portal/6"
+                    aria-label="Open external link to form in a new tab"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Data Request Form
+                  </a>
+                  <svg
+                    width="16px"
+                    height="16px"
+                    focusable="false"
+                    aria-label="(link is external)"
+                    viewBox="0 0 24 24"
+                    style="cursor: pointer"
+                  >
+                    <title>(link is external)</title>
+                    <g
+                      stroke-width="2.1"
+                      stroke="#666"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline
+                        points="17 13.5 17 19.5 5 19.5 5 7.5 11 7.5"
+                      ></polyline>
+                      <path
+                        d="M14,4.5 L20,4.5 L20,10.5 M20,4.5 L11,13.5"
+                      ></path>
+                    </g>
+                  </svg>
                 </div>
               </div>
             </div>
-          </ul>
-        </div></mat-card-content
-      >
-    </div></mat-card
-  >
+          </ul></div
+      ></mat-card-content></div
+  ></mat-card>
 </div>
