--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -42,6 +42,7 @@
                 </div>
                 <div *ngIf="stack.instance_id"  style="cursor: pointer;">
                   <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'running'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="statusProcessing[stack.instance_id] ? 'gray' : ''" (click)="instanceAction(stack.instance_id,'stop')"> Stop </a>
+                  <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'stopping'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="'gray' : ''" (click)=""> Start </a>
                   <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'stop'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="statusProcessing[stack.instance_id] ? 'gray' : ''" (click)="instanceAction(stack.instance_id,'run')"> Start </a>
                   <p *ngIf="instanceStates[stack.instance_id] == 'error' ">Error</p>
                 </div>
