--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -1,25 +1,28 @@
-<div style="padding: 20%;text-align:center;" *ngIf="stacks == null">
+<div style="padding: 20%; text-align: center" *ngIf="stacks == null">
   <h3>
-    <img src="../../assets/images/dot-logo.png">
-    <br>
-    <br> Loading
+    <img src="../../assets/images/dot-logo.png" />
+    <br />
+    <br />
+    Loading
   </h3>
 </div>
 
-<div class="container" style="width:1278px;">
+<div class="container" style="width: 1278px">
   <mat-card appearance="outlined">
     <!-- <div class="row" style="width:100%;"> -->
-      <!-- <h3>My Workstations</h3>
+    <!-- <h3>My Workstations</h3>
         <span>Workstations are Windows or linux Virtual Machines (VMs), which provide a mechanism for SDC users to access the datasets assigned to them or their own datasets, and perform analytics on the data</span><hr> -->
-      <mat-card-header>
-        <mat-card-title>My Workstations</mat-card-title>
-        <mat-card-subtitle>
-          Workstations are Windows or linux Virtual Machines (VMs), which provide a mechanism for SDC users to access the datasets assigned to them or their own datasets, and perform analytics on the data.
-        </mat-card-subtitle>
-      </mat-card-header>
-        <mat-card-content style="max-height: 300px;overflow-y: scroll">
-        <table class="table">
-          <thead class="thead-inverse">
+    <mat-card-header>
+      <mat-card-title>My Workstations</mat-card-title>
+      <mat-card-subtitle>
+        Workstations are Windows or linux Virtual Machines (VMs), which provide
+        a mechanism for SDC users to access the datasets assigned to them or
+        their own datasets, and perform analytics on the data.
+      </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content style="max-height: 300px; overflow-y: scroll">
+      <table class="table">
+        <thead class="thead-inverse">
           <tr>
             <th>#</th>
             <th>Stack Name</th>
@@ -28,37 +31,90 @@
             <th>Action</th>
             <th></th>
           </tr>
-          </thead>
-          <tbody>
+        </thead>
+        <tbody>
           <ng-template ngFor let-stack [ngForOf]="stacks" let-i="index+1">
             <tr>
               <td>{{ i }}</td>
-              <td  style="width:200px;">{{ stack.display_name }}</td>
-              <td style="width:500px;"> {{stack.application}} </td>
-              <td style="width:200px;" *ngIf="stack.configuration"> vCPUs: {{transformedConfigurations[i-1]['vCPUs']}}<br/> RAM(GiB): {{transformedConfigurations[i-1]['RAM(GiB)']}}</td>
+              <td style="width: 200px">{{ stack.display_name }}</td>
+              <td style="width: 500px">{{ stack.application }}</td>
+              <td style="width: 200px" *ngIf="stack.configuration">
+                vCPUs: {{ transformedConfigurations[i - 1]["vCPUs"] }}<br />
+                RAM(GiB): {{ transformedConfigurations[i - 1]["RAM(GiB)"] }}
+              </td>
               <td>
                 <div *ngIf="!stack.instance_id">
-                  <span>  ----</span>
+                  <span> ----</span>
                 </div>
-                <div *ngIf="stack.instance_id"  style="cursor: pointer;">
-                  <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'running'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="statusProcessing[stack.instance_id] ? 'gray' : ''" (click)="instanceAction(stack.instance_id,'stop')"> Stop </a>
-                  <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'stopping'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="'gray' : ''" (click)=""> Start </a>
-                  <a class="btn btn-primary dotBtn" *ngIf="instanceStates[stack.instance_id] == 'stop'" [style.pointer-events]="statusProcessing[stack.instance_id] ? 'none' : 'auto'" [style.color]="statusProcessing[stack.instance_id] ? 'gray' : ''" (click)="instanceAction(stack.instance_id,'run')"> Start </a>
-                  <p *ngIf="instanceStates[stack.instance_id] == 'error' ">Error</p>
+                <div *ngIf="stack.instance_id" style="cursor: pointer">
+                  <a
+                    class="btn btn-primary dotBtn"
+                    *ngIf="instanceStates[stack.instance_id] == 'running'"
+                    [style.pointer-events]="
+                      statusProcessing[stack.instance_id] ? 'none' : 'auto'
+                    "
+                    [style.color]="
+                      statusProcessing[stack.instance_id] ? 'gray' : ''
+                    "
+                    (click)="instanceAction(stack.instance_id, 'stop')"
+                  >
+                    Stop
+                  </a>
+                  <a
+                    class="btn btn-primary dotBtn"
+                    *ngIf="instanceStates[stack.instance_id] == 'stopping'"
+                    [style.pointer-events]="
+                      statusProcessing[stack.instance_id] ? 'none' : 'auto'
+                    "
+                    [style.color]="'gray'"
+                  >
+                    Start
+                  </a>
+                  <a
+                    class="btn btn-primary dotBtn"
+                    *ngIf="instanceStates[stack.instance_id] == 'stop'"
+                    [style.pointer-events]="
+                      statusProcessing[stack.instance_id] ? 'none' : 'auto'
+                    "
+                    [style.color]="
+                      statusProcessing[stack.instance_id] ? 'gray' : ''
+                    "
+                    (click)="instanceAction(stack.instance_id, 'run')"
+                  >
+                    Start
+                  </a>
+                  <p *ngIf="instanceStates[stack.instance_id] == 'error'">
+                    Error
+                  </p>
                 </div>
               </td>
               <td>
                 <!--<button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>-->
-                <a class="btn btn-primary dotBtn" style="cursor: pointer;" (click)="launchWorkstation(stack)" target="_blank"> Launch </a>
+                <a
+                  class="btn btn-primary dotBtn"
+                  style="cursor: pointer"
+                  (click)="launchWorkstation(stack)"
+                  target="_blank"
+                >
+                  Launch
+                </a>
               </td>
               <td>
-                <button class="btn btn-primary dotBtn" [disabled]="!getBoolean(stack.allow_resize)" (click)="renderReSizeDialog(stack)" style="cursor: pointer;" target="_blank"> Manage </button>
+                <button
+                  class="btn btn-primary dotBtn"
+                  [disabled]="!getBoolean(stack.allow_resize)"
+                  (click)="renderReSizeDialog(stack)"
+                  style="cursor: pointer"
+                  target="_blank"
+                >
+                  Manage
+                </button>
               </td>
             </tr>
           </ng-template>
-          </tbody>
-        </table>
-      </mat-card-content>
+        </tbody>
+      </table>
+    </mat-card-content>
     <!-- </div> -->
   </mat-card>
 </div>
