--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1871,6 +1871,7 @@
             Cancel
           </button>
           <button
+            mat-dialog-close
             style="margin-left: 10px"
             (click)="postResizeJSON()"
             class="btn btn-primary dotBtn"
