--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -63,9 +63,7 @@
                   <a
                     class="btn btn-primary dotBtn"
                     *ngIf="instanceStates[stack.instance_id] == 'stopping'"
-                    [style.pointer-events]="
-                      statusProcessing[stack.instance_id] ? 'none' : 'auto'
-                    "
+                    [style.pointer-events]="none"
                     [style.color]="'gray'"
                   >
                     Start
